<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect To Twitter</string>
    <string name="title_activity_timeline"></string>
    <string name="user_name_label">UserName</string>
    <string name="tweet_body_label">Body</string>
    <string name="screen_name_label">ScreenName</string>
    <string name="relative_time_label">0s</string>
    <string name="compose_label">compose</string>
    <string name="profile_label">profile</string>
    <string name="title_activity_compose_tweet">ComposeTweetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btn_tweet">Tweet</string>
    <string name="character_count_label">140</string>
    <string name="edit_text_hint">What\'s happening?</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="num_tweets_label">150\\nTWEETS</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>