<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/ivMyProfileImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivMyProfileImg"
        android:gravity="top"
        android:includeFontPadding="false"
        android:text="@string/user_name_label" />

    <TextView
        android:id="@+id/tvMyScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMyName"
        android:layout_toRightOf="@+id/ivMyProfileImg"
        android:gravity="top"
        android:includeFontPadding="false"
        android:text="@string/screen_name_label"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tvCharacterCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnTweet"
        android:layout_alignBottom="@+id/btnTweet"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/btnTweet"
        android:text="@string/character_count_label"
        android:textColor="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ivMyProfileImg"
        android:background="@drawable/roundbutton"
        android:enabled="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_tweet"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etCompose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivMyProfileImg"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_text_hint"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:lines="50"
        android:scrollbars="vertical"
        android:textColor="#404040" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/llProgressBarComposeTweet"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pbProgressBarComposeTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>
    </LinearLayout>

</RelativeLayout>